--- a/api/package.json
+++ b/api/package.json
@@ -14,8 +14,13 @@
   "author": "fadhilsaheer",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "nodemon": "^2.0.15",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "express": "^4.17.2",
+    "mongoose": "^6.1.5"
   }
 }
